add cluster scalibility

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "test":"node server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "gh-katha",
